--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,66 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Automata determinista de pila
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-modal [isOpen]="isModalOpen">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="changeIsModalOpen(false)"> Cerrar </ion-button>
+        </ion-buttons>
+        <ion-title size="large">Validación</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content [fullscreen]="true" class="ion-padding">
+      <ion-button expand="block" (click)="initValidation()" [disabled]="!isBottonOn"> Empezar </ion-button>
+      <ion-item> Resultado: {{resultado}} </ion-item>
+      <h1> Cadena a validar </h1>
+      <ion-grid id="str-grid">
+        <ion-row> <ion-col size="1" *ngFor="let letter of obtainLetters(str)">
+          <h3> {{letter}} </h3>
+        </ion-col> </ion-row>
+        <ion-row>
+          <ion-col size="1" offset="{{index}}"><ion-icon name="arrow-up-outline"></ion-icon></ion-col>
+        </ion-row>
+      </ion-grid>
+      <div id="pila-div">
+        <div id="grid-div">
+          <ion-grid id="pila-grid">
+            <ion-row> <ion-col id="pila-col" offset=4 size=4> Z </ion-col> </ion-row>
+          </ion-grid>
+        </div>
+      </div>
+      <h3 style="text-align: center;"> Pila </h3>
+      
+    </ion-content>
+  </ng-template>
+</ion-modal>
+
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Automata determinista de pila</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div id="content">
+    <h3> {{'{'}} Lenguaje =  w1cw2 | w1 &lt;&gt; w2' {{'}'}} </h3>
+    <h3 style="margin-top: 15px;"> w2 no sea el inverso de w1 </h3>
+    <ion-item style="margin-top: 15px;">
+      <ion-input
+      maxlength="12" 
+      label="cadena a validar"
+      label-placement="floating" [(ngModel)]="str"> </ion-input>
+    </ion-item>
+
+
+  
+    <ion-button style="margin-top: 40px;" (click)="changeIsModalOpen(true)"> Validar </ion-button>
   </div>
+
 </ion-content>
