--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,6 +8,40 @@
   transform: translateY(-50%);
 }
 
+#content {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top:30%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#str-grid{
+  --ion-grid-columns: 24;
+}
+
+#pila-div{
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+#grid-div{
+  margin-top: auto;
+}
+
+#pila-col{
+  background-color: #0054e9 !important;
+  color: #fff !important;
+  text-align: center !important;
+  border: solid 1px #fff !important;
+}
+
 #container strong {
   font-size: 20px;
   line-height: 26px;
@@ -24,4 +58,8 @@
 
 #container a {
   text-decoration: none;
+}
+
+ion-col{
+  text-align: center;
 }
